--- a/nlp/style.css
+++ b/nlp/style.css
@@ -25,8 +25,9 @@
 .EXCLAIM { /* 宣言の感嘆符 */
     color: rgb(222 101 132);
 }
-#codearea {
+#highlight {
+    height: min-content;
     color: rgb(245, 241, 236);
     background-color: rgb(20, 18, 28);
-    border: 1px solid rgb(255, 255, 255);
+    display: block;
 }
